# ipbridge

./: .gitignore  Pipfile  README.md  asabridge_app.py  asabridge_config.py  autoapp.py  com.aschulz.asabridge.plist  gunicorn_config.py  gunicorn_isolog.py  ipbridge_app.py  pyproject.toml  setup.py
LaunchAgents/: com.aschulz.asabridge-logging-broadcast.plist  com.aschulz.asabridge.plist  com.aschulz.ipbridge.plist  com.aschulz.logstream.plist  de.aschulz.ipbridge.plist
asabridge/: __init__.py  app.py  config.py  extensions.py  gunicorn_isolog.py  isoformatter.py  logstream.py  readinglist.py  user.py  validators.py  views.py
asabridge/certs/: README.md
asabridge/debug/: views.py
asabridge/index/: __init__.py  views.py
asabridge/login/: __init__.py  views.py
asabridge/logs/: __init__.py  views.py
asabridge/readinglist/: __init__.py  readinglist.py  readinglist_item.py  views.py
asabridge/static/: remove_readinglist.js  remove_readinglist.scpt  style.css
asabridge/templates/: layout.html  login.html  readinglist.html
favicon/: site.webmanifest
ipbridge/: app.py  config.py  extensions.py  gunicorn_isolog.py  isoformatter.py  logstream.py  validators.py
ipbridge/contacts/: __init__.py  contacts.py  objc.py  views.py
ipbridge/debug/: __init__.py  views.py
ipbridge/icloudtabs/: __init__.py  icloudtabs.py  views.py
ipbridge/login/: views.py
ipbridge/logs/: views.py
ipbridge/messages/: __init__.py  messages.py  views.py
ipbridge/readinglist/: readinglist.py  readinglist_item.py  (+1 more)
logstream/: logstream.py
nginx/: asabridge.conf  ipbridge.conf
(+8 files in other folders)
