[tool.poetry]
name = 'ipbridge'
version = '0.0.1'
description = 'REST access to local macOS services.'
authors = ['Andreas Schulz <andi.schulz@me.com>']
license = 'MIT'
readme = 'README.md'
repository = 'https://github.com/sdispater/poetry'
homepage = 'https://github.com/sdispater/poetry'

[tool.poetry.dependencies]
python = '>=3.6'
flask = "*"
flask-login = "*"
flask-caching = "*"
flask-socketio = "*"
simplepam = "*"
humanize = "*"
python-dateutil = "*"
redis = "*"
eventlet = "*"
gunicorn = "*"
pid = "*"
phonenumbers = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ['poetry>=0.12']
build-backend = 'poetry.masonry.api'

[tool.black]
line-length = 79
